# parameter-framework-plugins-alsa

./: .clang-format  .travis.yml  AUTHORS  Android.mk  CMakeLists.txt  COPYING  README.md
alsactl/: Android.mk  CMakeLists.txt  LegacyAlsaCtlPortConfig.cpp  LegacyAlsaCtlPortConfig.hpp  LegacyAlsaCtlSubsystemBuilder.cpp
amixer/: Android.mk  CMakeLists.txt  LegacyAmixerControl.cpp  LegacyAmixerControl.hpp  LegacyAmixerSubsystemBuilder.cpp
base/: AlsaCtlMappingKeys.hpp  AlsaCtlPortConfig.cpp  AlsaCtlPortConfig.hpp  AlsaCtlSubsystemTemplate.hpp  AlsaMappingKeys.hpp  AlsaSubsystem.hpp  AlsaSubsystemObject.cpp  AlsaSubsystemObject.hpp  AmixerControl.cpp  AmixerControl.hpp  AmixerMappingKeys.hpp  AmixerMutableVolume.hpp  AmixerSubsystemTemplate.hpp  Android.mk  CMakeLists.txt
legacy/: Android.mk  CMakeLists.txt  LegacyAlsaCtlPortConfig.cpp  LegacyAlsaCtlPortConfig.hpp  LegacyAlsaSubsystem.cpp  LegacyAlsaSubsystem.hpp  LegacyAlsaSubsystemBuilder.cpp  LegacyAmixerControl.cpp  LegacyAmixerControl.hpp
tinyalsa/: Android.mk  CMakeLists.txt  TinyAlsaCtlPortConfig.cpp  TinyAlsaCtlPortConfig.hpp  TinyAlsaSubsystem.cpp  TinyAlsaSubsystem.hpp  TinyAlsaSubsystemBuilder.cpp  TinyAmixerControl.cpp  TinyAmixerControl.hpp  TinyAmixerControlArray.cpp  TinyAmixerControlArray.hpp  TinyAmixerControlValue.cpp  TinyAmixerControlValue.hpp
tinyalsactl/: Android.mk  TinyAlsaCtlPortConfig.cpp  TinyAlsaCtlPortConfig.hpp  TinyAlsaCtlSubsystemBuilder.cpp
tinyamixer/: Android.mk  TinyAmixerControl.cpp  TinyAmixerControl.hpp  TinyAmixerControlArray.cpp  TinyAmixerControlArray.hpp  TinyAmixerControlValue.cpp  TinyAmixerControlValue.hpp  TinyAmixerSubsystemBuilder.cpp
